--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* NAVBAR */
 .navbar {
     display: flex;
     flex-direction: row;
@@ -15,7 +16,6 @@
 
 .nav_title {
     color: #1090CB;
-    font-weight: bold;
     font-size: 29px;
 }
 
@@ -45,8 +45,69 @@
     color: white;
 }
 
+/* SECTION 1 */
 .section1 {
     background-color: rgba(16, 144, 203, 0.1);
     width: 100%;
     height: 630px;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.sec1_konten {
+    padding-left: 112px;
+    padding-top: 77px;
+    width: 630px;
+    height: 450px;
+}
+
+.sec1_konten p {
+    /* Reset margin konten */
+    margin: 0;
+}
+
+.sec1_title {
+    font-size: 40px;
+}
+
+.sec1_title span {
+    color: #1090CB;
+}
+
+.sec1_deskripsi {
+    font-size: 16px;
+    color: #5C5C5C;
+}
+
+.sec1_button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 65px;
+}
+
+.sec1_button button {
+    width: 193px;
+    height: 51px;
+    border-radius: 10px;
+}
+
+.sec1_contactus {
+    background-color: #1090CB;
+    color: white;
+    font-size: 16px;
+}
+
+.sec1_viewmore {
+    background-color: white;
+    border: 1px solid #1090CB;
+    color: #1090CB;
+    margin-left: 15px;
+}
+
+.sec1_image {
+    width: 626px;
+    height: 417px;
+    padding: 60px 0 42px 0;
 }
