--- a/css/main.css
+++ b/css/main.css
@@ -138,3 +138,86 @@
     flex-direction: column;
     padding-left: 27px
 }
+
+/* Section 3 */
+.section3 {
+    margin-top: 40px;
+    background-color: rgba(16, 144, 203, 0.1);
+    width: 100%;
+    height: 534px;
+    padding-top: 148px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sec3-konten {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.sec3-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    height: 67px;
+    width: 540px;
+    padding-left: 22px;
+    padding-right: 22px;
+    border-radius: 10px;
+}
+
+/* Style the input element */
+.sec3-konten input[type="text"] {
+    color: #787878; /* Text color */
+    font-size: 16px; /* Font size */
+    width: 435px;
+  }
+  
+  /* Style the placeholder text */
+.sec3-konten input[type="text"]::placeholder {
+    color: #787878; /* Placeholder text color */
+    font-size: 16px; /* Placeholder font size */
+  }
+
+.sec3-konten button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000;
+    color: #FFF4F4;
+    border-radius: 10px;
+    width: 176px;
+    height:67px;
+    font-size: 16px;
+    margin-left: 14px;
+}
+
+footer {
+    height: 398px; 
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-konten {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+footer p {
+    font-size: 16px;
+    color: #515151;
+}
+
+footer h1 {
+    font-size:17px;
+}
+
