--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
 }
 
-.image-container {
+.container-image {
     position: relative;
     width: 567px; /* Adjust the container's width as needed */
     height: 467px; /* Adjust the container's height as needed */
@@ -27,12 +27,54 @@
     transform: translateY(150px);
 }
 
+.container-form {
+    width: 592px; 
+    height: 817px; 
+    background-color: #EFFCFA;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 22px;
+    position: relative;
+    z-index: 2;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1)
+    
+}
+
 .container-input {
     width: 404px;
     height: 52px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: white;
+    padding-left: 26px;
+    border-radius: 11px;
+    transform: translateY(-15px)
+}
+
+.container-email {
+    width: 404px;
+    display: flex;
+    flex-direction: column;
+}
+
+.email-text {
+    font-size: 22px;
+}
+
+form input {
+    margin-left: 10px;
+    font-size: 18px;
+    width: 75%;
+}
+
+.forget-password {
+    text-align: center; 
+    font-size: 20px; 
+    color: #1E6ADC;
+    margin-top: 52px;
+    margin-bottom: 70px;
 }
 
 .button-login {
@@ -44,4 +86,8 @@
     justify-content: center;
     color: #F9F9F9;
     background-color: #1E6ADC;
+    border-radius: 11px;
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 40px;
 }
