--- a/css/signup.css
+++ b/css/signup.css
@@ -1,28 +1,74 @@
+/* Overlay styles */
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+
+/* Popup styles */
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 8px;
+    z-index: 2;
+}
+
 .container-signup {
-  width: 860px;  height: 999px; background-color: #E8F4FA;
+  width: 650px; 
+  height: 799px; 
+  background-color: #E8F4FA;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-weight: bold;
-  margin-top: 150px;
-  margin-bottom: 100px;
-  margin-left: 259px;
-  margin-right: 359px;
   border-radius: 66px;
-  
-  
+}
+
+.form-signup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 14px;
+}
+
+.container-signup-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 550px;
+    height: 40px;
+}
+
+.container-signup-input p {
+    font-size: 20px;
 }
 
 .input-signup {
-    width: 407px; 
-    height: 52px; 
+    width: 307px; 
+    height: 39px; 
     background-color: white; 
     border-radius: 44px; 
-    padding-left: 26px;
-   
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
-
-
+.container-signup-button {
+    display: flex; 
+    flex-direction: row; 
+    align-items: center; 
+    justify-content: space-between;
+    margin-top: 115px;
+    width: 491px;
 }
 
 .button-reset {
@@ -37,28 +83,4 @@
     border-radius: 44px;
     font-weight: bold;
     font-size: 20px;
-    /* margin-top: 150px;
-    margin-bottom: 0px;
-    margin-left: 259px; */
-}
-
-.button-submit {
-    width: 214px;
-    height: 45px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    background-color: #D9D9D9;
-    border-radius: 44px;
-    font-weight: bold;
-    font-size: 20px;
-    /* margin-bottom: 190px;
-    margin-top: 0px;
-    margin-right: 299px; */
-}
-
-.body{
-    display: flex; flex-direction: row; justify-content: center;
 }
