--- a/css/signup.css
+++ b/css/signup.css
@@ -84,3 +84,15 @@
     font-weight: bold;
     font-size: 20px;
 }
+
+.error-messages {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: red;
+    font-size: 12px;
+}
+
+.error-message {
+    margin-top: 5px; /* Add spacing between error messages */
+}
