--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,18 @@
+.vector-hijau {
+    right: 0; 
+    bottom: 0; 
+    position: absolute; 
+    z-index: 0;
+    transform: translateX(75%) translateY(50%);
+}
+
+.vector-biru {
+    left: 0; 
+    bottom: 0; 
+    position: absolute; 
+    z-index: 0;
+}
+
 .container {
     width: 100%;
     display: flex;
@@ -8,28 +23,27 @@
 
 .container-image {
     position: relative;
-    width: 567px; /* Adjust the container's width as needed */
-    height: 467px; /* Adjust the container's height as needed */
+    width: 561px;
+    height: 479px;
 }
 
 .image1 {
-    width: 470px; 
-    height: 324px;
+    width: 548px; 
+    height: 332px;
     margin-left: 51px;
 }
 
 .image2 {
-    width: 300px; 
-    height: 266px;
+    width: 286px; 
+    height: 267px;
     position: absolute;
     right: 0;
-    /* transform: translateX(-250px); */
-    transform: translateY(150px);
+    transform: translateY(-150px) translateX(30px);
 }
 
 .container-form {
-    width: 592px; 
-    height: 817px; 
+    width: 636px; 
+    height: 489px; 
     background-color: #EFFCFA;
     display: flex;
     flex-direction: column;
@@ -43,7 +57,7 @@
 
 .container-input {
     width: 404px;
-    height: 52px;
+    height: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -73,13 +87,12 @@ form input {
     text-align: center; 
     font-size: 20px; 
     color: #1E6ADC;
-    margin-top: 52px;
-    margin-bottom: 70px;
+    transform: translateY(-40px)
 }
 
 .button-login {
-    width: 248px;
-    height: 41px;
+    transform: translateY(-55px);
+    width: 268px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -89,5 +102,5 @@ form input {
     border-radius: 11px;
     font-weight: bold;
     font-size: 20px;
-    margin-bottom: 40px;
+    padding: 10px;
 }
