--- a/css/stageofpregnancy.css
+++ b/css/stageofpregnancy.css
@@ -13,7 +13,7 @@
     height: 207px;
     background-color: aqua;
     margin-left: 999px; 
-    color: #1090CB; font-size: 10px; font-family: 'poppins-bold', sans-serif !important;"
+    color: #1090CB; font-size: 10px; font-family: 'poppins-bold', sans-serif !important;
 }
 
 .container-pertama {
