--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,13 @@ footer {
     justify-content: center;
 }
 
+.footer-sosmed {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top:115px;
+}
+
 footer p {
     font-size: 16px;
     color: #515151;
