--- a/css/stageofpregnancy.css
+++ b/css/stageofpregnancy.css
@@ -1,48 +1,57 @@
-.container-judul {
-    width: 1284px; height: 207px; background-color: #DBE6EB;
+/* JUDUL */
+.judul-symptom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 57px;
+}
+
+.container-judul{
+    width: 912px; 
+    height: 155px; 
+    background-color: #DBE6EB;
     border-radius: 44px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    margin-left: 744px;
-    margin-top: 11px;
+    font-size: 90px;
+    font-weight: 500;
+    position: relative;
 }
 
-.title-pertama {
-    text-align: left;
-    width: 1444px;
-    height: 207px;
-    background-color: aqua;
-    margin-left: 999px; 
-    color: #1090CB; font-size: 10px; font-family: 'poppins-bold', sans-serif !important;
+.vector-bintang {
+    height: 68.19px; 
+    width: 68.88px; 
+    position: absolute; 
+    right: 0; 
+    top: 0;
+    transform: translateY(-23px) translateX(25px);
 }
 
-.container-pertama {
-    text-align: center;
-    width: 1440px; height: 499px; background-color: #d3e9f3;
+/* MATERI TRISEMESTER */
+.materi-judul {
+    color: #1090CB;
+    font-size: 70px;
+    padding-left: 55px;
 }
-    
-/* Footer */
-footer {
-    height: 398px; 
-    padding-top: 30px;
+
+.container-trisemester {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #D3E9F3;
+    border-radius: 22px;
+    font-size: 70px;
+    width: 100%;
+    height: 493px;
+    
 }
 
-.footer-konten {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.container-trisemester p {
+    font-size: 28px;
+    width: 80%;
+    text-align: center;
 }
-
-footer p {
-    font-size: 16px;
-    color: #515151;
-}
-
-footer h1 {
-    font-size:17px;
-}
-   
