--- a/css/reset.css
+++ b/css/reset.css
@@ -4,10 +4,11 @@ html {
     -webkit-text-size-adjust: 100%; /* 2 */
   }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 /* Remove the margin in all browsers. */
 body {
   margin: 0;
-  font-family: "Poppins", Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Render the main element consistently in IE. */
