--- a/css/reset.css
+++ b/css/reset.css
@@ -1,20 +1,22 @@
+/* @import url('https://fonts.cdnfonts.com/css/manrope'); */
+
 /* Correct the line height in all browsers. Prevent adjustments of font size after orientation changes in iOS. */
 html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
-  }
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 /* Remove the margin in all browsers. */
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Manrope', sans-serif; */
+  font-family: "Poppins", Arial, sans-serif;
 }
 
 /* Render the main element consistently in IE. */
 main {
-    display: block;
-  }
+  display: block;
+}
 
 /* Correct the font size and margin on h1 elements within section and article contexts in Chrome, Firefox, and Safari. */
 h1 {
