--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,20 @@
+.login-navigation {
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #1E6ADC;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 126px;
+    height: 45px;
+    border-radius: 11px;
+    transform: translateX(20%);
+}
+
 .vector-hijau {
     right: 0; 
     bottom: 0; 
