--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.cdnfonts.com/css/manrope'); */
+@import url('https://fonts.cdnfonts.com/css/poppins');
 
 /* Correct the line height in all browsers. Prevent adjustments of font size after orientation changes in iOS. */
 html {
@@ -10,7 +10,7 @@ html {
 body {
   margin: 0;
   /* font-family: 'Manrope', sans-serif; */
-  font-family: "Poppins", Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Render the main element consistently in IE. */
