Update signup style and validation
- Style sesuai seperti figma,
- Validasi tambah untuk username, format hanya boleh huruf dan angka

--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,8 @@
     height: 45px;
     border-radius: 11px;
     transform: translateX(20%);
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .vector-hijau {
