--- a/css/signup.css
+++ b/css/signup.css
@@ -86,10 +86,14 @@
     align-items: center;
     justify-content: center;
     color: black;
-    background-color: #D9D9D9;
+    background-color: white;
     border-radius: 44px;
     font-weight: bold;
     font-size: 20px;
+}
+
+.button-reset:hover {
+    background-color: #f0f0f0; /* Change the background color to a slightly grey shade */
 }
 
 .error-messages {
