--- a/css/chat.css
+++ b/css/chat.css
@@ -1,3 +1,23 @@
+.popup {
+    display: none; /* Initially hide the popup */
+    position: fixed;
+    top: 50%; /* Center vertically */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%); /* Center both horizontally and vertically */
+    z-index: 999; /* Ensure the popup is above other content */
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+
 .container-chat {
     width: 988px; 
     height: 677px; 
@@ -6,6 +26,13 @@
     flex-direction: column;
     align-items: center;
     border-radius: 66px;
+}
+
+.consultation-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
 }
 
 .container-logo {
@@ -21,8 +48,8 @@
     justify-content: center;
 }
 
-.container-input p {
-    font-size: 32px;
+.container-input label {
+    font-size: 28px;
     font-weight: 500;
     width: 332px;
 }
@@ -37,7 +64,7 @@
 }
 
 .container-input textarea {
-    width: 437px;
+    width: 430px;
     height: 110px;
     background-color: white;
     border-radius: 22px;
