--- a/css/main.css
+++ b/css/main.css
@@ -34,13 +34,8 @@
     font-size: 16px;
 }
 
-.nav-flex-log {
-    width: 179px;
+.navbar button {
     margin-right: 56px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .navbar a button {
