--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,15 +1,34 @@
+.container-judul{
+    height: 155px; 
+    margin-top: 50px;
+    font-weight: 500;
+    text-align: center;
+}
+
+/* SECTION 1 */
+.container-gambar{
+    width: 80%; 
+    height: 600px;
+    margin-top: 88px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 30px;
+}
+
 .jarak-header {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    margin-top: 0%;
-    padding-left: 80px;
-    padding-bottom: 0%;
-    padding-right: 90px;
     font-size: 28px;
+    font-weight: 300;
     text-align: justify;
+    width: 70%;
 }
 
+/* CONTAINER FOTO TEAM */
 .container-team {
     width: 100%;
     background-color: #E8F4FA;
@@ -18,58 +37,52 @@
     flex-direction: column;
 }
 
-.card {
-    background-color: white;
-    margin: 40px;
-    border-radius: 15px;
-}
-
-.card, .img {
-    padding: 10px;
-}
-
-.card-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.card-footer, h5 {
-    margin-bottom: 0;
-}
-
-.card-footer, p {
-    margin-top: 8px;
+.judul-team {
+    font-size: 75px;
+    color: #1090CB;
+    text-align: center;
 }
 
 .row {
     display: flex;
     justify-content:center;
+    transform: translateY(-50px);
 }
 
-
-.judul-nutrition {
-    display: flex; 
-    flex-direction: row;
-    align-items: center;
-    margin-top: 57px;
-}
-
-.container-judul{
-    width: 912px;  
-    height: 155px; 
-    border-radius: 44px;
-    margin: 0 auto;
+/* CARD FOTO TEAM */
+.card {
+    background-color: white;
+    margin: 40px;
+    border-radius: 15px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    font-size: 90px;
-    font-weight: 500;
-    position: relative;
+    flex-direction: column;
+    padding: 10px;
 }
 
+.card h5 {
+    margin-bottom: 0;
+}
+
+.card p {
+    margin-top: 8px;
+}
+
+.container-foto {
+    width: 200px;
+    height:250px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.container-foto img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+/* ???? */
 .vector-bintang {
     height: 68.19px; 
     width: 68.88px; 
@@ -99,17 +112,7 @@
 }
 
 /* Section Gambar*/
-.container-gambar{
-    width: 100%; 
-    height: 429px; 
-    background-image: url(nutriguide/img);
-    margin-top: 88px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 136px;
-}
+
 
 /* Section Materi */
 .container-materi {
