Fix Nutrition Guide

--- a/css/nutritionguide.css
+++ b/css/nutritionguide.css
@@ -62,58 +62,30 @@
     gap: 136px;
 }
 
-/* Section Materi Rata Kiri*/
-.container-materi-kiri {
-    width: 100%;
+/* SECTION MATERI */
+.container-materi {
+    width: 90%;
+    margin: 0 auto;
+    height: 370px;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 15px;
 }
 
-.container-materi-kiri img {
-    margin-left: 35px;
-    width: 223px;
+.container-materi img {
+    width: 224px;
     height: 176px;
 }
 
-.container-materi-kiri h1 {
+.container-materi h1 {
     color: #1090CB; 
     font-size: 50px;
 }
 
-.container-materi-kiri p {
+.container-materi p {
     font-size: 17px;
-    margin-right: 35px;
     transform: translateY(-20px);
 }
-
-/* Section Materi Rata Kanan */
-.container-materi-kanan {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 15px;
-}
-
-.container-materi-kanan img {
-    margin-right: 35px;
-    width: 223px;
-    height: 176px;
-}
-
-.container-materi-kanan h1 {
-    color: #1090CB; 
-    font-size: 50px;
-}
-
-.container-materi-kanan p {
-    font-size: 17px;
-    margin-left: 35px;
-    transform: translateY(-20px);
-}
-
-
 
 
